# Facefusion_comfyui

./: .flake8  .gitignore  LICENSE  README.md  __init__.py  install.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
content_filter/: .gitignore  README.md  __init__.py  content_filter.py  hash_helper.py  test_filter.py
facefusion_api/: __init__.py  core.py  face_detector.py  local_swapper.py  swap_local.py  types.py  utils.py
facefusion_api/detection/: __init__.py  detector.py
facefusion_api/models/: __init__.py  constants.py  occluder.py  parser.py  swapper.py
facefusion_api/nodes/: __init__.py  base.py  content_filter_utils.py  detector_nodes.py  image_nodes.py  utility_nodes.py  video_nodes.py  visualizer_nodes.py
models/: .gitkeep
models/content_filter/: .gitkeep
