[project]
name = "facefusion_comfyui"
description = "Facefusion ComfyUI - Unofficial"
version = "1.0.10"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["httpx", "httpx-retries", "opencv-python", "onnxruntime"]

[project.urls]
Repository = "https://github.com/huygiatrng/Facefusion_comfyui"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/huygiatrng/Facefusion_comfyui/wiki"
"Bug Tracker" = "https://github.com/huygiatrng/Facefusion_comfyui/issues"

[tool.comfy]
PublisherId = "a4ront4ng"
DisplayName = "Facefusion_comfyui"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

